# aratinga

./: .gitignore  LICENSE  README-en-US.md  README.md  hello.py  pyproject.toml  requirements-dev.txt  requiriments-ci.txt
aratinga/: __init__.py  forms.py  search_urls.py  settings.py  urls.py  views.py
aratinga/models/: wagtailsettings_models.py
aratinga/project_template/: README-en-US.md  README.md  manage.py  requirements.txt
aratinga/project_template/basic/: requirements.txt
aratinga/project_template/basic/project_name/: settings.py
aratinga/project_template/project_name/: pyproject.toml  settings.py  urls.py
aratinga/project_template/project_name/settings/: base.py  dev.py  prod.py
aratinga/templatetags/: aratinga_tags.py
src/aratinga/: __about__.py  __init__.py  admin_urls.py  apps.py  forms.py  importexport.py  package.json  settings.py  urls.py  utils.py  views.py  wagtail_hooks.py  widgets.py
src/aratinga/admin/: apps.py  forms.py  loaders.py  middleware.py  models.py  settings.py  urls.py  views.py
src/aratinga/admin/migrations/: 0001_initial.py  0002_alter_themesettings_theme.py  0003_remove_theme_is_active.py  0004_alter_theme_description.py  0005_delete_themesettings.py  0006_themesettings.py
src/aratinga/admin/templates/wagtailadmin/: base.html
src/aratinga/admin_themes/: admin.py  apps.py  forms.py  middleware.py  models.py  settings.py
src/aratinga/admin_themes/migrations/: 0001_initial.py
src/aratinga/admin_themes/templates/wagtailadmin/: theme_settings.html
src/aratinga/blocks/: __init__.py  base_blocks.py  content_blocks.py  html_blocks.py  layout_blocks.py  section_blocks.py
src/aratinga/locale/pt_BR/LC_MESSAGES/: django.po
src/aratinga/migrations/: 0001_initial.py  0002_alter_aratingatag_options.py  0002_genericsettings_sitesettings.py  0003_alter_genericsettings_title_suffix.py  0003_genericsettings_remove_layoutsettings_navbar_class_and_more.py  0003_theme_themesettings.py  0004_carousel_classifier_carouselslide_classifierterm.py  0004_delete_theme_delete_themesettings.py  0005_aratingapage_classifier_terms_aratingapage_tags.py  0006_alter_genericsettings_title_suffix.py  0007_template_templatepage.py  0008_theme_themesettings.py  0009_delete_theme_delete_themesettings.py  0010_alter_genericsettings_title_suffix.py
src/aratinga/models/: __init__.py  page_models.py  pages_models.py  settings_models.py  snippet_models.py  snippets_models.py  wagtailsettings_models.py
src/aratinga/project_template/: requirements.txt
src/aratinga/project_template/documents/: admin.py  models.py
src/aratinga/project_template/documents/migrations/: 0001_initial.py  0002_documentindexpage.py  (+5 more)
src/aratinga/project_template/project_name/: pyproject.toml  urls.py
src/aratinga/project_template/project_name/settings/: base.py  prod.py
src/aratinga/project_template/search/: utils.py  views.py
src/aratinga/project_template/themes/: apps.py
src/aratinga/project_template/website/: models.py  wagtail_hooks.py
src/aratinga/static/css/: font-marcellus.css  main.css
src/aratinga/static/js/: main.js
src/aratinga/static/wagtail/: theme.css  theme.css.map  theme.scss
src/aratinga/templates/: 404.html  base.html  robots.txt
src/aratinga/templates/includes/: footer.html  header.html
src/aratinga/templates/pages/: genetic_page.html  preview_template.html
src/aratinga/templates/tags/: top_menu.html
src/aratinga/templates/wagtailadmin/: admin_base.html  login.html
src/aratinga/templatetags/: aratinga_tags.py  navigation_tags.py
src/aratinga/tests/: test_bin.py
src/aratinga/themes/: apps.py  forms.py  loaders.py  middleware.py  models.py  settings.py  thread.py  views.py  wagtail_hooks.py
src/aratinga/themes/migrations/: 0001_initial.py  0002_theme.py  0002_themesettings.py  0003_themesettings_theme_alter_themesettings_id.py  0004_initial_data.py  0005_alter_themesettings_options.py
src/aratinga/themes/models/: __init__.py  models.py
tests/: test_bin.py
(+64 files in other folders)
