# -- PACKAGE --------------------------

[build-system]
requires = ["setuptools>=65.5"]
build-backend = "setuptools.build_meta"

[project]
name = "aratinga"
description = "Wagtail + Voreios Extensions enabling rapid development of brasilian public educational-focused websites."
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Roraimae", email = "fabio@voreios.com.br"}
]
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Wagtail",
    "Framework :: Wagtail :: 6",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Internet :: WWW/HTTP :: Site Management",
]
dependencies = [
    "Django>=4.2,<6.0",
    "ruff>=0.6.4",
    "wagtail>=6.0,<7.0",
]

dynamic = ["version"]
license = {file = "LICENSE.txt"}

[project.scripts]
aratinga = "aratinga.bin.aratinga:main"

[project.urls]
Source = "https://github.com/roraimae/aratinga"

[tool.setuptools]
packages = ["aratinga"]

[tool.setuptools.dynamic]
version = {attr = "aratinga.__version__"}

[tool.uv.workspace]
members = ["packages/*"]
