[project]
name = "aratinga"
dynamic = ["version"]
description = "Wagtail + Voreios Extensions enabling rapid development of brasilian public educational-focused websites."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.12"
authors = [
    {name = "Roraimae", email = "fabio@voreios.com.br"}
]
dependencies = [
    "ruff>=0.6.4",
    "Django>=4.2,<6.0",
    "wagtail>=6.0,<7.0",
]

[project.scripts]
aratinga = "aratinga.bin:main"

[project.urls]
Source = "https://github.com/roraimae/aratinga"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "./src/aratinga/__about__.py"
