[project]
name = "mysite"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aratinga",
    "ruff>=0.6.5",
    "aratinga-seo",
    "django-govbrds",
    "django-bootstrap5>=24.3",
]

[tool.uv.sources]
aratinga = { git = "https://github.com/roraimae/aratinga", rev = "main" }
aratinga-seo = { git = "https://github.com/voreios/aratinga-seo", rev = "main" }
django-govbrds = { git = "https://github.com/roraimae/django-govbrds", rev = "main" }